--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </div>
 
       <!-- Grade-Level Representative -->
-      <div id="gradeRepsection" style="display:none;">
+      <div id="gradeRepSection" style="display:none;">
 	<h3 id=gradeRepTitle"></h3>
 	<select id=gradeRepCandidate">
           <option value="Candidate A">Candidate A</option>
