--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
 
       <!-- Grade-Level Representative -->
       <div id="gradeRepSection" style="display:none;">
-	<h3 id=gradeRepTitle"></h3>
-	<select id=gradeRepCandidate">
-          <option value="Candidate A">Candidate A</option>
-	  <option value="Candidate B">Candidate B</option>
-	</select>
-      </div>
+  <h3 id="gradeRepTitle"></h3>
+  <select id="gradeRepCandidate">
+    <option value="Candidate A">Candidate A</option>
+    <option value="Candidate B">Candidate B</option>
+  </select>
+</div>
 
       <button id="voteBtn">Submit Vote</button>
       </div>
