--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     
     <div id="voteSection" style="display:none;">
-      <h2>SSLG Candidates for <span id="gradeDisplay"></span></h2> <!-- Fixed gradeDisplay -->
+      <h2>SSLG Candidates SY 2025-2026</h2>
       
       <!-- School-Wide Positions -->
       <div class="position">
