--- a/index.html
+++ b/index.html
@@ -83,15 +83,14 @@
           <option value="Dianne Curtis">Dianne Curtis</option>
         </select>
       </div>
-
-      <!-- Grade-Level Representative -->
-      <div id="gradeRepSection" style="display:none;">
-        <h3 id="gradeRepTitle"></h3> <!-- Fixed missing quote -->
-        <select id="gradeRepCandidate"> <!-- Fixed missing quote -->
-          <option value="Candidate A">Candidate A</option>
-          <option value="Candidate B">Candidate B</option>
-        </select>
-      </div>
+      
+      <!-- Grade-Level Representative Section -->
+<div id="gradeRepSection" style="display:none;">
+  <h3 id="gradeRepTitle"></h3>
+  <select id="gradeRepCandidate">
+    <!-- Options will be added dynamically via JavaScript -->
+  </select>
+</div>
 
       <button id="voteBtn">Submit Vote</button>
     </div>
