--- a/index.html
+++ b/index.html
@@ -29,58 +29,56 @@
       <div class="position">
         <h3>President</h3>
         <select class="candidate">
-          <option value="John Dela Cruz">John Dela Cruz</option>
-          <option value="Maria Santos">Maria Santos</option>
+          <option value="Ken Erick Adizas">Ken Erick Adizas</option>
+          <option value="Abstain">Abstain</option>
         </select>
       </div>
 
       <div class="position">
         <h3>Vice President</h3>
         <select class="candidate">
-          <option value="Pedro Reyes">Pedro Reyes</option>
-          <option value="Ana Lopez">Ana Lopez</option>
+          <option value="Ferlyn Garsain">Ferlyn Garsain</option>
+          <option value="John Cedrick Padis">John Cedrick Padis</option>
         </select>
       </div>
 
       <div class="position">
         <h3>Secretary</h3>
         <select class="candidate">
-          <option value="Ana Calamaya">Ana Calamaya</option>
-          <option value="Rose Labarro">Rose Labarro</option>
+          <option value="Kirsten Ingrid Obzunar">Kirsten Ingrid Obzunar</option>
+          <option value="Arwin Ala">Arwin Ala</option>
         </select>
       </div>
 
       <div class="position">
         <h3>Treasurer</h3>
         <select class="candidate">
-          <option value="Razel Carcillar">Razel Carcillar</option>
-          <option value="Hannah Zuckerberg">Hannah Zuckerberg</option>
+          <option value="Rica Mae Leuterio">Rica Mae Leuterio</option>
+          <option value="Izzy Faith Sister">Izzy Faith Sister</option>
         </select>
       </div>
 
       <div class="position">
-        <h3>Auditors</h3>
+        <h3>Auditor</h3>
         <select class="candidate">
-          <option value="Venus Valencia">Venus Valencia</option>
-          <option value="Yassi Pressman">Yassi Pressman</option>
-          <option value="Rona Arcales">Rona Arcales</option>
-          <option value="Shyrelle Mandaguio">Shyrelle Mandaguio</option>
+          <option value="Jhelyn Mae Villamor">Jhelyn Mae Villamor</option>
+          <option value="Micaella Fariscal">Micaella Fariscal</option>
         </select>
       </div>
 
       <div class="position">
         <h3>Public Information Officer</h3>
         <select class="candidate">
-          <option value="Klay Zanderford">Klay Zanderford</option>
-          <option value="Jerome Moore">Jerome Moore</option>
+          <option value="Quyhn Xnijlov Rillera">Quyhn Xnijlov Rillera</option>
+          <option value="Charieta Landrito">Charieta Landrito</option>
         </select>
       </div>
 
       <div class="position">
         <h3>Protocol Officer</h3>
         <select class="candidate">
-          <option value="Daniel Palfrey">Daniel Palfrey</option>
-          <option value="Dianne Curtis">Dianne Curtis</option>
+          <option value="Gian Gallano">Gian Gallano</option>
+          <option value="Frenses Ann Lagarde">Frenses Ann Lagarde</option>
         </select>
       </div>
       
