--- a/index.html
+++ b/index.html
@@ -97,4 +97,14 @@
 
   <script type="module" src="app.js"></script>
 </body>
+
+     <!-- Results Section -->
+     <div id="resultsSection" style="display:none;">
+      <h1>Live Election Results</h1>
+      <button id="showResults">Show Results</button>
+      <div id="results"></div>
+    </div>
+  </div>
+</body>
+</html>
 </html>
