--- a/results.html
+++ b/results.html
@@ -12,7 +12,7 @@
 <body>
     <div class="results-container">
         <header>
-            <h1>SSLG ELECTION LIVE RESULTS</h1>
+            <h1>SSLG ELECTION LIVE RESULTSfg</h1>
             <div class="last-updated" id="lastUpdated">
                 ⏳ Loading latest votes...
             </div>
